--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/.env":["assets/.env"],"assets/images/FrankiaFlag.png":["assets/images/FrankiaFlag.png"],"assets/images/Key.png":["assets/images/Key.png"],"assets/images/Token.png":["assets/images/Token.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
